added days to phase words

--- a/rtr-hub.html
+++ b/rtr-hub.html
@@ -226,11 +226,11 @@
     </p>
 
     <div class="cycle-options">
-      <a href="/day1/day1-cheatsheet.html">Menstruation → Day 1</a>
-      <a href="/day2/day2-cheatsheet.html">Mid-Luteal → Day 2</a>
-      <a href="/day3/day3-cheatsheet.html">Post-Ovulation → Day 3</a>
-      <a href="/day4/day4-cheatsheet.html">Late Luteal → Day 4</a>
-      <a href="/day5/day5-cheatsheet.html">Pre-Bleed Reset → Day 5</a>
+      <a href="/day1/day1-cheatsheet.html">Menstruation → Days 1 to 7</a>
+      <a href="/day2/day2-cheatsheet.html">Mid-Luteal → Day 19</a>
+      <a href="/day3/day3-cheatsheet.html">Post-Ovulation → Day 15</a>
+      <a href="/day4/day4-cheatsheet.html">Late Luteal → Days 20-28</a>
+      <a href="/day5/day5-cheatsheet.html">Pre-Bleed Reset → Day 28</a>
     </div>
   </section>
 
