--- a/upgrade rtr-hub.html
+++ b/upgrade rtr-hub.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+
 <link rel="icon" href="/artificial-momentum-favicon-rounded.ico">
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,7 +10,7 @@
 <title>Raw to Reset — Hub</title>
 
 <style>
-  :root {
+  :root{
     --brand:#FC8B73;
     --ink:#0D0D0E;
     --soft:#FFF7F4;
@@ -18,410 +19,228 @@
     --radius:18px;
   }
 
-  html,body {
-    margin:0; padding:0;
+  html,body{
+    margin:0;padding:0;
     background:#F7F7F7;
     color:var(--ink);
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   }
 
-  p, h1, h2, h3 { line-height:1.55; }
+  .wrap{max-width:900px;margin:28px auto 64px;padding:0 18px;}
 
-  .wrap {
-    max-width:900px;
-    margin:28px auto 64px;
-    padding:0 18px;
-  }
-
-  /* Brand Logo */
-  .brand {
-    text-align:center;
-    margin-bottom:12px;
-  }
-  .brand img {
-    width:clamp(88px,9vw,140px);
-    height:auto;
+  .brand{text-align:center;margin-bottom:12px;}
+  .brand img{
+    width:clamp(88px,9vw,140px);height:auto;
     filter:drop-shadow(0 4px 14px rgba(0,0,0,.08));
   }
 
-  /* Breadcrumb */
-  .breadcrumb {
-    display:block;
-    margin:6px 0 18px;
-    font-size:.95rem;
-    color:#777;
-    opacity:.9;
-    text-decoration:none;
-    transition:.25s ease;
+  .breadcrumb{
+    display:block;margin:6px 0 18px;
+    font-size:.95rem;color:#777;opacity:.9;
+    text-decoration:none;transition:.25s;
   }
-  .breadcrumb:hover {
-    color:var(--brand);
-    opacity:1;
-  }
+  .breadcrumb:hover{color:var(--brand);opacity:1;}
 
-  /* Header */
-  header {
+  header{
     background:var(--brand);
-    color:#fff;
-    border-radius:var(--radius);
-    padding:26px 20px 28px;
-    text-align:center;
+    color:#fff;border-radius:var(--radius);
+    padding:26px 20px 28px;text-align:center;
     margin-bottom:26px;
     box-shadow:0 8px 24px rgba(0,0,0,.08);
   }
-
-  header h1 {
-    margin:0;
-    font-size:clamp(24px,5vw,38px);
-    line-height:1.12;
-    font-weight:700;
+  header h1{
+    margin:0;font-size:clamp(24px,5vw,38px);
+    line-height:1.12;font-weight:700;
   }
+  .sub{opacity:.95;margin-top:6px;font-size:1.1rem;font-weight:500;}
 
-  .sub {
-    opacity:.95;
-    margin-top:6px;
-    font-size:1.1rem;
-    font-weight:500;
-  }
-
-  /* Card */
-  .card {
-    background:var(--card);
-    padding:20px;
-    border-radius:var(--radius);
-    border:1px solid var(--line);
-    margin-top:24px;
-    box-shadow:0 8px 22px rgba(0,0,0,.06);
-  }
-
-  .tone {
+  /* ---------------------------
+     New Cycle Component
+  ----------------------------*/
+  .cycle-card{
     background:var(--soft);
-    border-left:6px solid var(--brand);
-  }
-
-  /* Cycle Bar */
-  .cycle-bar {
-    background:linear-gradient(to right,#ffe4dd,#fff);
     border:1px solid var(--line);
     border-radius:var(--radius);
-    padding:22px;
-  }
-  .cycle-bar h3 {
-    margin:0;
-    font-size:1.25rem;
-    color:var(--brand);
+    padding:24px 22px;
+    box-shadow:0 8px 22px rgba(0,0,0,.06);
+    margin-top:24px;
   }
 
-  .cycle-options {
+  .cycle-card h2{margin-top:0;}
+
+  .cycle-grid{
+    display:grid;
+    gap:14px;
+    margin-top:18px;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  }
+
+  .pill{
     display:flex;
-    flex-wrap:wrap;
-    gap:12px;
-    margin-top:14px;
-  }
-
-  .cycle-options a {
-    flex:1;
-    min-width:130px;
-    text-align:center;
+    flex-direction:column;
     background:#fff;
     border:2px solid var(--brand);
-    color:var(--brand);
-    padding:10px;
-    border-radius:999px;
-    text-decoration:none;
-    font-weight:600;
-    transition:all .25s ease;
-  }
-  .cycle-options a:hover {
-    background:var(--brand);
-    color:#fff;
-    transform:translateY(-1px);
-  }
-
-  /* --- Cycle Selection Component --- */
-
-.cycle-bar {
-  background: var(--soft);
-  border: 1px solid var(--line);
-  border-radius: var(--radius);
-  padding: 24px 22px;
-}
-
-.cycle-title {
-  margin: 0;
-  font-size: 1.25rem;
-  color: var(--brand);
-  font-weight: 700;
-}
-
-.cycle-desc {
-  margin: 6px 0 18px;
-  font-size: .97rem;
-  opacity: .9;
-  line-height: 1.55;
-}
-
-.cycle-grid {
-  display: grid;
-  gap: 14px;
-  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-}
-
-.cycle-pill {
-  display: flex;
-  flex-direction: column;
-  background: #fff;
-  padding: 14px 16px;
-  border-radius: 14px;
-  border: 2px solid var(--brand);
-  text-decoration: none;
-  transition: all .25s ease;
-}
-
-.cycle-pill:hover {
-  background: var(--brand);
-  color: #fff;
-  transform: translateY(-2px);
-  box-shadow: 0 8px 20px rgba(252, 139, 115, 0.3);
-}
-
-.cycle-pill .phase {
-  font-weight: 700;
-  font-size: 1.05rem;
-}
-
-.cycle-pill .range {
-  font-size: .9rem;
-  opacity: .8;
-  margin-top: 2px;
-}
-
-.cycle-pill .rtr {
-  margin-top: 6px;
-  font-size: .9rem;
-  font-weight: 600;
-  color: var(--brand);
-}
-
-.cycle-pill:hover .rtr {
-  color: #fff;
-}
-
-
-  /* Grid */
-  .grid {
-    display:grid;
-    gap:18px;
-    margin-top:20px;
-    grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  }
-
-  .item {
-    background:var(--card);
-    border-radius:var(--radius);
-    border:1px solid var(--line);
-    padding:18px;
+    border-radius:14px;
+    padding:14px 16px;
     text-decoration:none;
     color:var(--ink);
-    box-shadow:0 8px 18px rgba(0,0,0,.05);
-    transition:all .25s ease;
+    transition:.25s ease;
+    box-shadow:0 6px 14px rgba(0,0,0,.05);
   }
 
-  .item:hover {
+  .pill:hover{
+    background:var(--brand);
+    color:#fff;
     transform:translateY(-2px);
-    box-shadow:0 10px 28px rgba(0,0,0,.08);
+    box-shadow:0 10px 24px rgba(252,139,115,.35);
   }
 
-  .item strong {
-    color:var(--brand);
-    font-weight:700;
+  .pill strong{font-size:1.1rem;}
+  .pill span{opacity:.8;margin-top:2px;font-size:.93rem;}
+  .pill em{margin-top:6px;font-style:normal;font-weight:600;color:var(--brand);}
+  .pill:hover em{color:#fff;}
+
+  /* ---------------------------
+     Hub Buttons
+  ----------------------------*/
+  .hub-section{margin-top:24px;}
+  .hub-section h2{margin-top:0;}
+
+  .hub-grid{
+    display:grid;
+    gap:16px;
+    margin-top:16px;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
   }
 
-  /* Footer */
-  footer {
-    text-align:center;
-    margin-top:48px;
-    margin-bottom:60px;
-    font-size:1.05rem;
+  .hub-btn{
+    display:block;
+    padding:16px 18px;
+    background:#fff;
+    border:2px solid var(--brand);
+    border-radius:16px;
+    text-decoration:none;
+    color:var(--ink);
     font-weight:600;
-    opacity:.95;
-    line-height:1.7;
-  }
-  footer strong {
-    color:var(--brand);
+    line-height:1.45;
+    transition:.25s;
+    box-shadow:0 6px 14px rgba(0,0,0,.05);
   }
 
-  /* Dark mode override */
+  .hub-btn:hover{
+    background:var(--brand);
+    color:#fff;
+    transform:translateY(-2px);
+    box-shadow:0 10px 24px rgba(252,139,115,.35);
+  }
+
+  footer{
+    text-align:center;
+    font-size:1.05rem;font-weight:600;
+    margin-top:48px;margin-bottom:60px;
+    opacity:.95;line-height:1.7;
+  }
+  footer strong{color:var(--brand);}
+
+  /* Dark-mode safety */
   @media (prefers-color-scheme: dark){
-    :root { color-scheme: light !important; }
-    html, body, .card, .item, footer {
-      background:#FFFFFF !important;
+    :root{color-scheme:light!important;}
+    html,body,.hub-btn,.pill,.card,footer{
+      background:#fff !important;
       color:#0D0D0E !important;
     }
-    header {
-      background:#FC8B73 !important;
-      color:#fff !important;
-    }
-    .cycle-bar {
-      background:#FFF7F4 !important;
-    }
+    header{background:#FC8B73!important;color:#fff!important;}
   }
-
-  /* ============================================
-   HUB UPGRADE — Card Buttons & Layout
-   ============================================ */
-
-.hub-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 16px;
-  margin-top: 16px;
-}
-
-.hub-btn {
-  display: block;
-  padding: 16px 18px;
-  background: #fff;
-  border: 2px solid var(--brand);
-  border-radius: 16px;
-  text-decoration: none;
-  color: var(--ink);
-  font-weight: 600;
-  box-shadow: 0 6px 14px rgba(0,0,0,0.05);
-  transition: all .25s ease;
-  line-height: 1.45;
-}
-
-.hub-btn:hover {
-  background: var(--brand);
-  color: #fff;
-  box-shadow: 0 8px 20px rgba(252,139,115,0.35);
-  transform: translateY(-2px);
-}
-
-/* Journals section */
-.journal-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 14px;
-  margin-top: 14px;
-}
 
 </style>
 </head>
 
-
 <body>
-  <div class="wrap">
+<div class="wrap">
 
-    <!-- Brand -->
-    <div class="brand">
-      <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
-    </div>
-
-    <a href="/" class="breadcrumb">← Back to Home</a>
-
-    <header>
-      <h1>Raw to Reset — Hub</h1>
-      <div class="sub">Your 5-day rhythm reset — in one place.</div>
-    </header>
-
-    <!-- ============================================
-         CYCLE SELECTION (your new gorgeous buttons)
-    ============================================= -->
-    <section class="card">
-      <h2>🧬 Start Where *Your* Cycle Is</h2>
-      <p>If you're joining mid-cycle, choose the day that fits your physiology right now. Not sure? Click the one that feels closest — you can’t get this wrong.</p>
-
-      <div class="cycle-select">
-
-        <a class="pill" href="day1/day1-cheatsheet.html">
-          <strong>Menstruation</strong>
-          <span>around days 1–7</span>
-          <em>→ RTR Day 1</em>
-        </a>
-
-        <a class="pill" href="day2/day2-cheatsheet.html">
-          <strong>Mid-Luteal</strong>
-          <span>around day 19</span>
-          <em>→ RTR Day 2</em>
-        </a>
-
-        <a class="pill" href="day3/day3-cheatsheet.html">
-          <strong>Post-Ovulation</strong>
-          <span>around day 15</span>
-          <em>→ RTR Day 3</em>
-        </a>
-
-        <a class="pill" href="day4/day4-cheatsheet.html">
-          <strong>Late Luteal</strong>
-          <span>around days 20-28</span>
-          <em>→ RTR Day 4</em>
-        </a>
-
-        <a class="pill active" href="day5/day5-cheatsheet.html">
-          <strong>Pre-Bleed Reset</strong>
-          <span>around day 28</span>
-          <em>→ RTR Day 5</em>
-        </a>
-
-      </div>
-    </section>
-
-    <!-- ============================================
-         ALL PAGES SECTION
-    ============================================= -->
-    <section class="card">
-      <h2>📘 All Pages</h2>
-      <p>Everything you need — videos, recipes, cheat sheets, and your journals — organised by day.</p>
-
-      <div class="hub-grid">
-
-        <a class="hub-btn" href="day1/day1-cheatsheet.html">
-          <strong>Day 1</strong><br>Cheat Sheet, Video, Recipe, Journal
-        </a>
-
-        <a class="hub-btn" href="day2/day2-cheatsheet.html">
-          <strong>Day 2</strong><br>Cheat Sheet, Video, Recipe, Journal
-        </a>
-
-        <a class="hub-btn" href="day3/day3-cheatsheet.html">
-          <strong>Day 3</strong><br>Cheat Sheet, Video, Recipe, Journal
-        </a>
-
-        <a class="hub-btn" href="day4/day4-cheatsheet.html">
-          <strong>Day 4</strong><br>Cheat Sheet, Video, Recipe, Journal
-        </a>
-
-        <a class="hub-btn" href="day5/day5-cheatsheet.html">
-          <strong>Day 5</strong><br>Cheat Sheet, Video, Recipe, Journal
-        </a>
-
-      </div>
-    </section>
-
-    <!-- ============================================
-         JOURNALS SECTION
-    ============================================= -->
-    <section class="card">
-      <h2>📝 Your Journals</h2>
-      <p>If you submitted them, I have them — but feel free to revisit the blank versions below.</p>
-
-      <div class="journal-grid">
-
-        <a class="hub-btn" href="day1/day1-journal.html">Day 1 Journal</a>
-        <a class="hub-btn" href="day2/day2-journal.html">Day 2 Journal</a>
-        <a class="hub-btn" href="day3/day3-journal.html">Day 3 Journal</a>
-        <a class="hub-btn" href="day4/day4-journal.html">Day 4 Journal</a>
-        <a class="hub-btn" href="day5/day5-journal.html">Day 5 Journal</a>
-
-      </div>
-    </section>
-
-    <footer>
-      🍌 Rhythm isn’t something you chase — <strong>it’s something you return to.</strong>
-    </footer>
-
+  <div class="brand">
+    <img src="https://cdn.artificialmomentum.com/logo.png">
   </div>
+
+  <a href="/" class="breadcrumb">← Back to Home</a>
+
+  <header>
+    <h1>Raw to Reset — Hub</h1>
+    <div class="sub">Your 5-day rhythm reset — in one place.</div>
+  </header>
+
+  <!-- CYCLE SELECTION -->
+  <section class="cycle-card">
+    <h2>🧬 Start Where *Your* Cycle Is</h2>
+    <p>If you're joining mid-cycle, choose the day that fits your physiology right now. Not sure? Pick the one that feels closest — you can’t get this wrong.</p>
+
+    <div class="cycle-grid">
+
+      <a class="pill" href="day1/day1-cheatsheet.html">
+        <strong>Menstruation</strong>
+        <span>around days 1–7</span>
+        <em>→ RTR Day 1</em>
+      </a>
+
+      <a class="pill" href="day2/day2-cheatsheet.html">
+        <strong>Mid-Luteal</strong>
+        <span>around day 19</span>
+        <em>→ RTR Day 2</em>
+      </a>
+
+      <a class="pill" href="day3/day3-cheatsheet.html">
+        <strong>Post-Ovulation</strong>
+        <span>around day 15</span>
+        <em>→ RTR Day 3</em>
+      </a>
+
+      <a class="pill" href="day4/day4-cheatsheet.html">
+        <strong>Late Luteal</strong>
+        <span>around days 20–28</span>
+        <em>→ RTR Day 4</em>
+      </a>
+
+      <a class="pill" href="day5/day5-cheatsheet.html">
+        <strong>Pre-Bleed Reset</strong>
+        <span>around day 28</span>
+        <em>→ RTR Day 5</em>
+      </a>
+
+    </div>
+  </section>
+
+  <!-- ALL PAGES -->
+  <section class="hub-section card">
+    <h2>📘 All Pages</h2>
+    <p>Everything you need — videos, recipes, cheat sheets, and your journals — organised by day.</p>
+
+    <div class="hub-grid">
+      <a class="hub-btn" href="day1/day1-cheatsheet.html"><strong>Day 1</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day2/day2-cheatsheet.html"><strong>Day 2</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day3/day3-cheatsheet.html"><strong>Day 3</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day4/day4-cheatsheet.html"><strong>Day 4</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day5/day5-cheatsheet.html"><strong>Day 5</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+    </div>
+  </section>
+
+  <!-- JOURNALS -->
+  <section class="hub-section card">
+    <h2>📝 Your Journals</h2>
+    <p>If you submitted them, I have them — but you're welcome to revisit the blank versions below.</p>
+
+    <div class="hub-grid">
+      <a class="hub-btn" href="day1/day1-journal.html">Day 1 Journal</a>
+      <a class="hub-btn" href="day2/day2-journal.html">Day 2 Journal</a>
+      <a class="hub-btn" href="day3/day3-journal.html">Day 3 Journal</a>
+      <a class="hub-btn" href="day4/day4-journal.html">Day 4 Journal</a>
+      <a class="hub-btn" href="day5/day5-journal.html">Day 5 Journal</a>
+    </div>
+  </section>
+
+  <footer>
+    🍌 Rhythm isn’t something you chase — <strong>it’s something you return to.</strong>
+  </footer>
+
+</div>
 </body>
 </html>
