--- a/upgrade rtr-hub.html
+++ b/upgrade rtr-hub.html
@@ -201,6 +201,18 @@
     box-shadow:0 8px 20px rgba(252,139,115,.35);
   }
 
+  /* Soften text inside the hub buttons */
+.hub-btn {
+  color: #444;
+  font-weight: 500;
+}
+
+.hub-btn strong {
+  color: var(--brand);
+  font-weight: 600;
+}
+
+
   /* Footer */
   footer{
     text-align:center;
