--- a/rtr-hub.html
+++ b/rtr-hub.html
@@ -3,49 +3,45 @@
 <head>
 <meta charset="utf-8" />
 <link rel="icon" href="/artificial-momentum-favicon-rounded.ico">
-
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="color-scheme" content="light dark">
 <title>Raw to Reset — Hub</title>
 
 <style>
-  :root {
+  :root{
     --brand:#FC8B73;
     --ink:#0D0D0E;
-    --soft:#FFF7F4;
+    --soft:#FFF2EE;
     --card:#FFFFFF;
     --line:#ffd7cc;
+    --blue:#3B6EA3;
     --radius:18px;
   }
 
-  html,body {
-    margin:0; padding:0;
+  html,body{
+    margin:0;padding:0;
     background:#F7F7F7;
     color:var(--ink);
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   }
 
-  p, h1, h2, h3 { line-height:1.55; }
+  p,h1,h2,h3{line-height:1.55;}
 
-  .wrap {
+  .wrap{
     max-width:900px;
     margin:28px auto 64px;
     padding:0 18px;
   }
 
   /* Brand Logo */
-  .brand {
-    text-align:center;
-    margin-bottom:12px;
-  }
-  .brand img {
+  .brand{text-align:center;margin-bottom:12px;}
+  .brand img{
     width:clamp(88px,9vw,140px);
-    height:auto;
     filter:drop-shadow(0 4px 14px rgba(0,0,0,.08));
   }
 
   /* Breadcrumb */
-  .breadcrumb {
+  .breadcrumb{
     display:block;
     margin:6px 0 18px;
     font-size:.95rem;
@@ -54,13 +50,10 @@
     text-decoration:none;
     transition:.25s ease;
   }
-  .breadcrumb:hover {
-    color:var(--brand);
-    opacity:1;
-  }
+  .breadcrumb:hover{color:var(--brand);opacity:1;}
 
   /* Header */
-  header {
+  header{
     background:var(--brand);
     color:#fff;
     border-radius:var(--radius);
@@ -69,23 +62,21 @@
     margin-bottom:26px;
     box-shadow:0 8px 24px rgba(0,0,0,.08);
   }
-
-  header h1 {
+  header h1{
     margin:0;
     font-size:clamp(24px,5vw,38px);
     line-height:1.12;
     font-weight:700;
   }
-
-  .sub {
+  .sub{
     opacity:.95;
     margin-top:6px;
     font-size:1.1rem;
     font-weight:500;
   }
 
-  /* Card */
-  .card {
+  /* Section Cards */
+  .card{
     background:var(--card);
     padding:20px;
     border-radius:var(--radius);
@@ -94,189 +85,241 @@
     box-shadow:0 8px 22px rgba(0,0,0,.06);
   }
 
-  .tone {
+  .tone{
     background:var(--soft);
     border-left:6px solid var(--brand);
   }
 
-  /* Cycle Bar */
-  .cycle-bar {
-    background:linear-gradient(to right,#ffe4dd,#fff);
-    border:1px solid var(--line);
+  /* === Cycle Selection — Option C (Soft + Editorial) === */
+
+  .cycle-box{
+    background:var(--soft);
     border-radius:var(--radius);
-    padding:22px;
-  }
-  .cycle-bar h3 {
-    margin:0;
-    font-size:1.25rem;
-    color:var(--brand);
+    border:1px solid var(--line);
+    padding:24px 22px;
   }
 
-  .cycle-options {
+  .cycle-box h2{
+    margin:0;
+    font-size:1.25rem;
+    color:var(--blue);
     display:flex;
-    flex-wrap:wrap;
-    gap:12px;
+    align-items:center;
+    gap:.4rem;
+  }
+
+  .cycle-desc{
+    margin:8px 0 16px;
+    opacity:.9;
+    font-size:.97rem;
+  }
+
+  .cycle-grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(210px,1fr));
+    gap:14px;
+  }
+
+  .cycle-pill{
+    display:block;
+    background:#fff;
+    border:2px solid var(--brand);
+    border-radius:14px;
+    padding:14px 16px;
+    text-decoration:none;
+    color:var(--ink);
+    transition:.25s ease;
+    box-shadow:0 6px 16px rgba(0,0,0,.04);
+  }
+
+  .cycle-pill:hover{
+    background:var(--brand);
+    color:#fff;
+    transform:translateY(-2px);
+    box-shadow:0 10px 22px rgba(252,139,115,.32);
+  }
+
+  .cycle-pill strong{
+    display:block;
+    font-size:1.05rem;
+    color:var(--blue);
+  }
+  .cycle-pill:hover strong{
+    color:#fff;
+  }
+
+  .cycle-pill span{
+    font-size:.9rem;
+    opacity:.75;
+  }
+
+  .cycle-pill em{
+    display:block;
+    margin-top:6px;
+    font-size:.9rem;
+    color:var(--brand);
+    font-style:normal;
+    font-weight:600;
+  }
+  .cycle-pill:hover em{
+    color:#fff;
+  }
+
+  /* All Pages + Journals Grids */
+  .hub-grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+    gap:16px;
+    margin-top:16px;
+  }
+
+  .journal-grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
+    gap:14px;
     margin-top:14px;
   }
 
-  .cycle-options a {
-    flex:1;
-    min-width:130px;
-    text-align:center;
+  /* Hub Buttons */
+  .hub-btn{
+    display:block;
     background:#fff;
     border:2px solid var(--brand);
-    color:var(--brand);
-    padding:10px;
-    border-radius:999px;
-    text-decoration:none;
-    font-weight:600;
-    transition:all .25s ease;
-  }
-  .cycle-options a:hover {
-    background:var(--brand);
-    color:#fff;
-    transform:translateY(-1px);
-  }
-
-  /* Grid */
-  .grid {
-    display:grid;
-    gap:18px;
-    margin-top:20px;
-    grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  }
-
-  .item {
-    background:var(--card);
-    border-radius:var(--radius);
-    border:1px solid var(--line);
-    padding:18px;
+    padding:16px 18px;
+    border-radius:16px;
     text-decoration:none;
     color:var(--ink);
-    box-shadow:0 8px 18px rgba(0,0,0,.05);
-    transition:all .25s ease;
+    font-weight:600;
+    transition:.25s;
+    box-shadow:0 6px 14px rgba(0,0,0,0.05);
   }
 
-  .item:hover {
+  .hub-btn:hover{
+    background:var(--brand);
+    color:#fff;
     transform:translateY(-2px);
-    box-shadow:0 10px 28px rgba(0,0,0,.08);
+    box-shadow:0 8px 20px rgba(252,139,115,.35);
   }
 
-  .item strong {
-    color:var(--brand);
-    font-weight:700;
-  }
+  /* Soften text inside the hub buttons */
+.hub-btn {
+  color: #444;
+  font-weight: 500;
+}
+
+.hub-btn strong {
+  color: var(--brand);
+  font-weight: 600;
+}
+
 
   /* Footer */
-  footer {
+  footer{
     text-align:center;
     margin-top:48px;
-    margin-bottom:60px;
     font-size:1.05rem;
     font-weight:600;
-    opacity:.95;
     line-height:1.7;
+    opacity:.95;
   }
-  footer strong {
-    color:var(--brand);
-  }
-
-  /* Dark mode override */
-  @media (prefers-color-scheme: dark){
-    :root { color-scheme: light !important; }
-    html, body, .card, .item, footer {
-      background:#FFFFFF !important;
-      color:#0D0D0E !important;
-    }
-    header {
-      background:#FC8B73 !important;
-      color:#fff !important;
-    }
-    .cycle-bar {
-      background:#FFF7F4 !important;
-    }
-  }
+  footer strong{color:var(--brand);}
 </style>
 </head>
-
 
 <body>
 <div class="wrap">
 
   <!-- Brand -->
   <div class="brand">
-    <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum Logo">
+    <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
   </div>
 
-  <!-- Breadcrumb -->
   <a href="/" class="breadcrumb">← Back to Home</a>
 
-  <!-- Header -->
   <header>
     <h1>Raw to Reset — Hub</h1>
     <div class="sub">Your 5-day rhythm reset — in one place.</div>
   </header>
 
-
-  <!-- Start Page by Cycle Phase -->
-  <section class="card cycle-bar">
-    <h3>✨ Start Where *Your* Cycle Is</h3>
-    <p style="margin-top:6px;font-size:.97rem;opacity:.85;">
+  <!-- ===================================================
+        CYCLE SELECTION — Soft Peach Warmth (Option C)
+  ==================================================== -->
+  <section class="cycle-box">
+    <h2>🧬 Start Where <em>Your</em> Cycle Is</h2>
+    <p class="cycle-desc">
       If you're joining mid-cycle, choose the day that fits your physiology right now.
+      Not sure? Go with the one that feels closest — you can’t get this wrong.
     </p>
 
-    <div class="cycle-options">
-      <a href="/day1/day1-cheatsheet.html">Menstruation → Days 1 to 7</a>
-      <a href="/day2/day2-cheatsheet.html">  Mid-Luteal →   Day 19</a>
-      <a href="/day3/day3-cheatsheet.html">Post-Ovulation → Day 15</a>
-      <a href="/day4/day4-cheatsheet.html">Late Luteal → Days 20-28</a>
-      <a href="/day5/day5-cheatsheet.html">Pre-Bleed Reset → Day 28</a>
+    <div class="cycle-grid">
+
+      <a class="cycle-pill" href="day1/day1-cheatsheet.html">
+        <strong>Menstruation</strong>
+        <span>around days 1–7</span>
+        <em>→ RTR Day 1</em>
+      </a>
+
+      <a class="cycle-pill" href="day2/day2-cheatsheet.html">
+        <strong>Mid-Luteal</strong>
+        <span>around day 19</span>
+        <em>→ RTR Day 2</em>
+      </a>
+
+      <a class="cycle-pill" href="day3/day3-cheatsheet.html">
+        <strong>Post-Ovulation</strong>
+        <span>around day 15</span>
+        <em>→ RTR Day 3</em>
+      </a>
+
+      <a class="cycle-pill" href="day4/day4-cheatsheet.html">
+        <strong>Late Luteal</strong>
+        <span>around days 20–28</span>
+        <em>→ RTR Day 4</em>
+      </a>
+
+      <a class="cycle-pill" href="day5/day5-cheatsheet.html">
+        <strong>Pre-Bleed Reset</strong>
+        <span>around day 28</span>
+        <em>→ RTR Day 5</em>
+      </a>
+
     </div>
   </section>
 
-
-  <!-- All Pages -->
+  <!-- ===================================================
+        ALL PAGES
+  ==================================================== -->
   <section class="card tone">
-    <h2 style="margin-top:0;">📘 All Pages</h2>
+    <h2>📘 All Pages</h2>
     <p>Everything you need — videos, recipes, cheat sheets, and your journals — organised by day.</p>
 
-    <div class="grid">
-      <a class="item" href="/day1/day1-cheatsheet.html">
-        <strong>Day 1</strong><br>Cheat Sheet, Video, Recipe, Journal
-      </a>
-      <a class="item" href="/day2/day2-cheatsheet.html">
-        <strong>Day 2</strong><br>Cheat Sheet, Video, Recipe, Journal
-      </a>
-      <a class="item" href="/day3/day3-cheatsheet.html">
-        <strong>Day 3</strong><br>Cheat Sheet, Video, Recipe, Journal
-      </a>
-      <a class="item" href="/day4/day4-cheatsheet.html">
-        <strong>Day 4</strong><br>Cheat Sheet, Video, Recipe, Journal
-      </a>
-      <a class="item" href="/day5/day5-cheatsheet.html">
-        <strong>Day 5</strong><br>Cheat Sheet, Video, Recipe, Journal
-      </a>
+    <div class="hub-grid">
+      <a class="hub-btn" href="day1/day1-cheatsheet.html"><strong>Day 1</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day2/day2-cheatsheet.html"><strong>Day 2</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day3/day3-cheatsheet.html"><strong>Day 3</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day4/day4-cheatsheet.html"><strong>Day 4</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
+      <a class="hub-btn" href="day5/day5-cheatsheet.html"><strong>Day 5</strong><br>Cheat Sheet, Video, Recipe, Journal</a>
     </div>
   </section>
 
-
-  <!-- Journals -->
+  <!-- ===================================================
+        JOURNALS
+  ==================================================== -->
   <section class="card">
-    <h2>✒️ Your Journals</h2>
-    <p style="opacity:.85">If you submitted them, I have them — but feel free to revisit the blank versions below.</p>
+    <h2>📝 Your Journals</h2>
+    <p>If you submitted them, I have them — but feel free to revisit the blank versions below.</p>
 
-    <div class="grid">
-      <a class="item" href="/day1/day1-journal.html"><strong>Day 1 Journal</strong></a>
-      <a class="item" href="/day2/day2-journal.html"><strong>Day 2 Journal</strong></a>
-      <a class="item" href="/day3/day3-journal.html"><strong>Day 3 Journal</strong></a>
-      <a class="item" href="/day4/day4-journal.html"><strong>Day 4 Journal</strong></a>
-      <a class="item" href="/day5/day5-journal.html"><strong>Day 5 Journal</strong></a>
+    <div class="journal-grid">
+      <a class="hub-btn" href="day1/day1-journal.html">Day 1 Journal</a>
+      <a class="hub-btn" href="day2/day2-journal.html">Day 2 Journal</a>
+      <a class="hub-btn" href="day3/day3-journal.html">Day 3 Journal</a>
+      <a class="hub-btn" href="day4/day4-journal.html">Day 4 Journal</a>
+      <a class="hub-btn" href="day5/day5-journal.html">Day 5 Journal</a>
     </div>
   </section>
-
 
   <footer>
-    🌙 Rhythm isn’t something you chase — <strong>it’s something you return to.</strong>
+    🍌 Rhythm isn’t something you chase — <strong>it’s something you return to.</strong>
   </footer>
 
 </div>
