--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -303,7 +303,7 @@
       <h2>🧰 Support Moves</h2>
       <ul>
         <li><strong>Fuel early:</strong> 20–30 g protein + minerals within 60 minutes of waking.<br><span class="why">I use electrolytes, creatine, and pea protein after an overnight fast.</span></li>
-        <li><strong>Pace wisely:</strong> swap “push through” for “check in.” Yoga, walking, stretching > HIIT today.</li>
+        <li><strong>Pace wisely:</strong> swap “push through” for “check in.” Yoga, walking, stretching > No HIIT today.</li>
         <li><strong>Grace first:</strong> if you’re ADHD/RSD/ND, the self-talk spiral is real. Offer yourself the same tone you’d use with your child.<br><span class="why">“This will pass. My body’s got my back.”</span></li>
       </ul>
     </section>
