--- a/dec-7.html
+++ b/dec-7.html
@@ -108,11 +108,11 @@
     <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum Logo" class="logo">
 
     <header>
-      <h1>Your Rhythm Reset Starts Soon</h1>
+      <h1>Your Rhythm Reset Starts December 7th</h1>
     </header>
 
     <p>We’re almost ready to begin ✨</p>
-    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, November 30th</strong>.</p>
+    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, December 7th</strong>.</p>
     <p>You’ll get your first video, cheat sheet, recipe, and journal page straight to your inbox that morning.</p>
 
     <p>Until then, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
