Added testimonial pic

--- a/dec7/Old/index.html
+++ b/dec7/Old/index.html
@@ -155,9 +155,7 @@ img.loaded {
       readiness to shift something.</p>
 
     <div class="proof" role="note" aria-label="participant feedback">
-      <div class="portrait-wrapper">
-    <img src="testimonial.jpg" alt="testimonial">
-  </div>
+      <span class="badge">What she said</span>
       <span>"Raw to Reset helped me reconnect with my body in a real and simple way. 
         It encouraged me to make small changes that already make me feel more aligned and supported." <span class="attrib">— Emanuela, professional and mother of twins.</span></span>
     </div>
