Date changed to dec 7

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -112,7 +112,7 @@
     </header>
 
     <p>We’re almost ready to begin ✨</p>
-    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, 9th November</strong>.</p>
+    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, December 7th</strong>.</p>
     <p>You’ll get your first video, cheat sheet, recipe, and journal page straight to your inbox that morning.</p>
 
     <p>Until then, make sure your emails from <strong>connect@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
