--- a/thankyou/youre-in.html
+++ b/thankyou/youre-in.html
@@ -102,7 +102,7 @@
 
       <div class="message">
         <strong>🌟🎉 You're in!</strong>
-        You’ve just claimed your founding seat in <strong>Raw to Reset</strong> — a
+        You’ve just claimed your seat in <strong>Raw to Reset</strong> — a
         5-day rhythm reboot for your hormones, energy, and clarity.<br /><br />
         💌 Your welcome email and access instructions will land in your inbox
         soon.<br /><br />
