--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@ img.loaded {
       readiness to shift something.</p>
 
     <div class="proof" role="note" aria-label="participant feedback">
-      <span class="badge">What she said</span>
+      <div class="portrait-wrapper">
+    <img src="testimonial.jpg" alt="testimonial">
+  </div>
       <span>"Raw to Reset helped me reconnect with my body in a real and simple way. 
         It encouraged me to make small changes that already make me feel more aligned and supported." <span class="attrib">— Emanuela, professional and mother of twins.</span></span>
     </div>
