Added style block for <badge>

--- a/index.html
+++ b/index.html
@@ -210,6 +210,27 @@
     .proof, .mini-intro { background: #1a1a1a; border-color: #444; color: #eaeaea; }
     .cta { background: #d45d5d; }
   }
+
+  .founding-offer-banner {
+  background: #fff3f1;
+  border: 2px solid #fa9884;
+  color: #d45d5d;
+  padding: 12px 16px;
+  margin: 0.75rem 0 1.4rem;
+  border-radius: 14px;
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: center;
+  line-height: 1.4;
+}
+@media (prefers-color-scheme: dark) {
+  .founding-offer-banner {
+    background: #1a1a1a;
+    border-color: #ffb0a2;
+    color: #ffb0a2;
+  }
+}
+
 </style>
 
 <!-- Rotating testimonial script -->
