--- a/index.html
+++ b/index.html
@@ -212,38 +212,38 @@
   }
 
 .founding-offer-banner {
-  background: #fff8f5;
-  border: 1.5px solid #f4a293;
-  color: #d45d5d;
-  padding: 10px 14px;
-  margin: 1rem auto 1.4rem;
-  
-  /* NEW: elegant fixed width for premium feel */
-  max-width: 82%;
-  
+  background: #fff7f4;
+  border: 2px solid #fa9884;
+  color: #6b2f23;
+  padding: 14px 18px;
+  border-radius: 16px;
+  margin: 1.4rem auto 1.8rem;
   text-align: center;
+  max-width: 420px;
+  line-height: 1.45;
+}
+
+.founding-offer-top {
+  font-size: 0.9rem;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.founding-offer-details {
+  font-size: 0.92rem;
   font-weight: 600;
-  font-size: 0.95rem;
-
-  /* NEW: tighter line rhythm */
-  line-height: 1.35;
-
-  border-radius: 14px;
-
-  /* NEW: subtle shadow for depth */
-  box-shadow: 0px 2px 5px rgba(212, 93, 76, 0.08);
+  color: #b24b35;
 }
 
-.founding-offer-banner .icon {
-  margin-right: 4px;
-}
-
+/* Dark mode */
 @media (prefers-color-scheme: dark) {
   .founding-offer-banner {
     background: #1a1a1a;
     border-color: #ffb0a2;
     color: #ffb0a2;
-    box-shadow: none;
+  }
+  .founding-offer-details {
+    color: #ffb0a2;
   }
 }
 
@@ -307,11 +307,10 @@
     <!-- BADGE -->
 
 <div class="founding-offer-banner">
-  <span class="icon">🧭</span>
-  <strong>Founding Cohort</strong> —
-  <strong>First 5 join free</strong> ·
-  Early birds <strong>£17 until Jan 31</strong> ·
-  Starts <strong>Jan 11, 2026</strong>
+  <div class="founding-offer-top">🧭 Founding Cohort</div>
+  <div class="founding-offer-details">
+    First 5 join free · Early birds £17 until Jan 31 · Starts Jan 11, 2026
+  </div>
 </div>
 
 
