--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   padding: 14px 18px;
   border-radius: 16px;
   margin: 1.4rem auto 1.8rem;
-  text-align: left;
+  text-align: center;
   max-width: 420px;
   line-height: 1.45;
 }
