--- a/index.html
+++ b/index.html
@@ -201,47 +201,44 @@
     color: #999;
   }
 
-/* Founding Offer Banner — refined, left-aligned, softer */
 .founding-offer-banner {
   background: #ffffff;
-  border: 1.5px solid #fa9884;
+  border: 2px solid #fa9884;
   color: #6b2f23;
-  padding: 10px 14px;
+  padding: 10px 16px;
   border-radius: 14px;
-  margin: 1rem 0 1.6rem;
-  text-align: left;
-  max-width: 360px;  /* slightly smaller, neater */
-  line-height: 1.45;
+  margin: 1.9rem auto 2.2rem;   /* MORE SPACE BELOW */
+  max-width: 360px;             /* PERFECT WIDTH */
+  text-align: left;             /* Clean readability */
+  line-height: 1.4;
 }
 
 .founding-offer-top {
-  font-size: 0.78rem;
-  font-weight: 700;
-  letter-spacing: 0.2px;
+  font-size: 0.8rem;
+  font-weight: 600;
   margin-bottom: 2px;
-  color: #d45d5d;
+  text-align: center;           /* Keep the top centered for structure */
 }
 
 .founding-offer-details {
-  font-size: 0.88rem;
+  font-size: 0.86rem;
   font-weight: 600;
   color: #b24b35;
+  text-align: center;          /* Better balance */
 }
 
-/* Dark mode */
+/* DARK MODE FIXES */
 @media (prefers-color-scheme: dark) {
   .founding-offer-banner {
     background: #1a1a1a;
     border-color: #ffb0a2;
     color: #ffb0a2;
   }
-  .founding-offer-top {
-    color: #ffb0a2;
-  }
   .founding-offer-details {
     color: #ffb0a2;
   }
 }
+
 
 
 
