--- a/index.html
+++ b/index.html
@@ -206,28 +206,29 @@
   border: 2px solid #fa9884;
   color: #6b2f23;
   padding: 10px 16px;
-  border-radius: 14px;
-  margin: 1.9rem auto 2.2rem;   /* MORE SPACE BELOW */
-  max-width: 360px;             /* PERFECT WIDTH */
-  text-align: left;             /* Clean readability */
-  line-height: 1.4;
+  border-radius: 16px;
+  margin: 1.6rem auto 1.6rem;
+  max-width: 420px;
+  line-height: 1.45;
+  display: block;
+  text-align: center;
 }
 
 .founding-offer-top {
   font-size: 0.8rem;
   font-weight: 600;
   margin-bottom: 2px;
-  text-align: center;           /* Keep the top centered for structure */
+  opacity: 0.9;
 }
 
 .founding-offer-details {
-  font-size: 0.86rem;
+  font-size: 0.90rem;
   font-weight: 600;
   color: #b24b35;
-  text-align: center;          /* Better balance */
+  letter-spacing: 0.1px;
 }
 
-/* DARK MODE FIXES */
+/* Dark mode */
 @media (prefers-color-scheme: dark) {
   .founding-offer-banner {
     background: #1a1a1a;
