Date and spam warning

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -112,11 +112,11 @@
     </header>
 
     <p>We’re almost ready to begin ✨</p>
-    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, December 7th</strong>.</p>
+    <p>Your 5-day <strong>Raw to Reset</strong> journey starts on <strong>Sunday, January 11th</strong>.</p>
     <p>You’ll get your first video, cheat sheet, recipe, and journal page straight to your inbox that morning.</p>
 
-    <p>Until then, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
-
+    <p>IMPORTANT, make sure your emails from <strong>rtr@artificialmomentum.com</strong> are marked safe — you won’t want to miss Day 1!</p>
+    <p> <strong>If you don't recieve your emails, please check your SPAM folder </p>
     <a href="mailto:rtr@artificialmomentum.com" class="button">Ask a Question</a>
 
     <p style="font-size:.9rem;opacity:.8;margin-top:24px;">See you soon — with rhythm,<br><strong>Diana Air</strong></p>
